# aix-roastnet-hackathon

./: AIX_BOT_VOTING_STRATEGY.md  AIX_STRATEGY_REFINEMENT.md  AIX_TECHNICAL_PROPOSAL.md  MISSION_CONTROL.md  README.md  ROASTNET_VIRAL_MECHANICS.md  ROAST_BOT_PLATFORM.md  ROAST_NET_ENHANCED.md  agent.json  agent_registration.json  agentwallet-complete.sh  agentwallet-config.json  agentwallet-pending.json  project_ideas.md  roast_net_contract.rs  roast_net_viral_contract.rs  skill_marketplace.rs
aix-roastnet/: Anchor.toml
aix-roastnet/programs/aix-roastnet/: Cargo.toml
aix-roastnet/programs/aix-roastnet/src/: lib.rs
demo/: index.html
programs/aix-roastnet/: Cargo.toml
