[package]
name = "aix-roastnet"
version = "0.1.0"
description = "AIX RoastNet for Colosseum Hackathon"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aix_roastnet"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
